--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -1,5 +1,5 @@
 {% extends "account/base.html" %}
-{% load precavidos_extras %}
+{% load base_extras %}
 
 {% block main %}
     <h1>{% if token_fail %}Token Incorrecto!{% else %}Cambiar Contraseña{% endif %}</h1>
