--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,7 +1,7 @@
 {% extends "account/base.html" %}
 
 {% load account socialaccount %}
-{% load precavidos_extras %}
+{% load base_extras %}
 
 {% block main %}
 
