--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,5 +1,5 @@
 {% extends "account/base.html" %}
-{% load precavidos_extras %}
+{% load base_extras %}
 
 {% block main %}
   <h1>Cambiar Contraseña</h1>
