--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -1,6 +1,6 @@
 {% extends "account/base.html" %}
 {% load account %}
-{% load precavidos_extras %}
+{% load base_extras %}
 
 {% block main %}
   <h1 class="h3">Restablecer Contraseña</h1>
