--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,7 +1,7 @@
 {% extends "account/base.html" %}
 
 {% load account socialaccount %}
-{% load precavidos_extras %}
+{% load base_extras %}
 
 {% block main %}
   <h1 class="text-center">Registrarse</h1>
